#[=======================================================================[
Copyright (C) 2024-2025 Gianmarco Lenzi
Licensed under MIT as part of the DSK project, see LICENSE file for details.
A copy of the license can be found at: https://opensource.org/licenses/MIT.

src/CMakeLists.txt
Build all DSK executables and libraries.
#]=======================================================================]

add_subdirectory(dsrt)